# DictateAI

./: README.md  grant_permissions.sh  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
download-site/: README.md  index.html  styles.css  vercel.json
figma-mock/: README.md  index.html
scripts/: create-updater-artifacts.sh
src/: App.tsx  Overlay.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/llama-lib/: libggml-base.0.dylib  libggml-blas.0.dylib  libggml-cpu.0.dylib  libggml-metal.0.dylib  libggml.0.dylib  libllama.0.dylib  libmtmd.0.dylib  libssl.3.dylib
src-tauri/src/: commands.rs  error.rs  lib.rs  on_device.rs  overlay.rs  pipeline.rs  processing_mode.rs  state.rs  tray.rs
src-tauri/src/audio/: capture.rs  feedback.rs  mod.rs
src-tauri/src/db/: history.rs  mod.rs  schema.rs  settings.rs  vocabulary.rs
src-tauri/src/hotkey/: handler.rs
src-tauri/src/paste/: clipboard.rs  mod.rs  simulate.rs
src-tauri/src/rewrite/: alibaba.rs  apple_fm.rs  gemini.rs  local_cleanup.rs  local_llm.rs  mod.rs  openai.rs  prompt.rs
src-tauri/src/transcribe/: api.rs  mod.rs  model_manager.rs  whisper.rs
src-tauri/src/transcribe/local/: download.rs  mod.rs  parakeet.rs  streaming.rs
src-tauri/swift/: apple_fm_helper.swift
src/app/: App.tsx  routes.ts
src/components/: ApiKeySettings.tsx  AppIcons.tsx  GeneralSettings.tsx  HistoryViewer.tsx  HomePage.tsx  HotkeyPage.tsx  (+8 more)
src/lib/: ui.ts  (+7 more)
(+21 files in other folders)
