[package]
name = "dictateai"
version = "1.0.5"
description = "DictateAI desktop app"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"

# Audio capture and playback
cpal = "0.15"
rodio = "0.20"
hound = "3.5"
rubato = "0.16"

# Speech-to-text
whisper-rs = "0.13"

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] }
futures-util = "0.3"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Keyboard simulation for paste
enigo = { version = "0.2", features = ["serde"] }

# macOS native CGEvent for keyboard simulation (thread-safe unlike HIToolbox)
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Utilities
log = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
